--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,12 +8,17 @@ h1 {
 
 h3 {
     color: white;
+    margin-bottom: 2px;
+}
+
+h4 {
+    margin: 6px;
 }
 .character {
     float: left;
     width: 150px;
-    height: 170px;
-    margin: 3px;
+    height: 130px;
+    margin: 2px;
 
     text-align: center;
 
@@ -45,5 +50,9 @@ h3 {
 }
 
 .oponent-section {
+    clear: both;
+}
+
+.fight-section {
     clear: both;
 }
