player can choose a new opponent until the game is over

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ h4 {
 .enemies {
     background-color: rgb(255, 80, 80);
 }
- .oponent {
+ .opponent {
      background-color: black;
      color: white;
  }
