--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 body {
-    background-color: rgb(41, 39, 39);
+    background-image: url("../images/background.jpg");
+    background-size: 100%;
 }
 
 h1 {
@@ -48,16 +49,14 @@ h4 {
 
 .enemies-section {
     clear: both;
+    height: 140px;
 }
 
-.oponent-section {
+.opponent-section {
     clear: both;
+    height: 140px;
 }
 
 .fight-section {
     clear: both;
-}
-
-section {
-    height: 140px;
 }
